fixed section overlap bug on mobile

--- a/scss/donate.scss
+++ b/scss/donate.scss
@@ -71,14 +71,14 @@ $animation-length: 80s;
 }
 
 .hero-information {
-  margin-top: 200px; /*ADDED THIS*/
+  margin-top: 200px;
   position: relative;
   z-index: 3;
   animation: wait 600ms, fade-in 800ms 600ms;
   animation-duration: 2s;
 }
 .hero-information .hero-logo {
-  margin-top: -210px; /*ADDED THIS*/
+  margin-top: -200px;
   margin-bottom: 15px;
 }
 
@@ -479,7 +479,7 @@ h2 {
     margin-top: -30px;
   }
   .donate-impact {
-    padding-top: 10%;
+    padding-top: 15%;
   }
 }
 
@@ -525,6 +525,10 @@ h2 {
     margin-left: 2%;
     margin-right: 2%;
     font-size: 81%;
+  }
+  .donate-impact {
+    margin-top: 15%;
+    padding-top: 25%;
   }
   .col-sm {
     padding-bottom: 5%;
